Infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userdistributed-ingress
  namespace: userdistributed
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: userdistributed-api
                port:
                  number: 80
